@@ -1,3 +1,4 @@
+1143747314	Ajax-Feature in die Karte eingebaut, schnelleres Wechseln des Systems.
 1143411205	Allianzbewerbungen können nun untersagt werden.
 1143403372	Groß-Klein-Schreibung zählt jetzt nicht mehr in Benutzeraccounts und Allianzen.
 1143384025	Ajax-Feature verbessert.
